--- a/rn-style/package.json
+++ b/rn-style/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-component",
+  "name": "rn-style",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,7 +11,6 @@
   "dependencies": {
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
-    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
